--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": "^8.1",
         "illuminate/redis": "^10.41",
         "laravel/lumen-framework": "^10.0",
-        "league/flysystem": "^3.23"
+        "league/flysystem": "^3.23",
+        "tymon/jwt-auth": "^2.0"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.13",
