--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": "^8.1",
+        "illuminate/console": "^10.41",
         "illuminate/redis": "^10.41",
         "laravel/lumen-framework": "^10.0",
         "league/flysystem": "^3.23",
@@ -15,6 +16,7 @@
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.13",
         "fakerphp/faker": "^1.9.1",
+        "laravel-lang/common": "^6.1",
         "mockery/mockery": "^1.4.4",
         "phpunit/phpunit": "^10.0"
     },
