--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/lumen-framework": "^10.0",
         "league/flysystem": "^3.23",
         "predis/predis": "^2.2",
+        "spatie/laravel-permission": "^6.3",
         "tymon/jwt-auth": "^2.0"
     },
     "require-dev": {
