--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,11 @@ REDIS_CLIENT=predis
 
 JWT_SECRET=
 
+DEFAULT_SMS_CLIENT=
+
 TENCENT_ENDPOINT=
 TENCENT_SECRET_ID=
 TENCENT_SECRET_KEY=
+TENCENT_SMS_TEMPLATE_ID=
+TENCENT_SMS_SIGN=
+TENCENT_SMS_APP_ID=
