--- a/.env.example
+++ b/.env.example
@@ -24,9 +24,9 @@ JWT_SECRET=
 
 DEFAULT_SMS_CLIENT=
 
-TENCENT_ENDPOINT=
 TENCENT_SECRET_ID=
 TENCENT_SECRET_KEY=
+TENCENT_SMS_ENDPOINT=
 TENCENT_SMS_TEMPLATE_ID=
 TENCENT_SMS_SIGN=
 TENCENT_SMS_APP_ID=
