--- a/.env.example
+++ b/.env.example
@@ -22,11 +22,11 @@ REDIS_CLIENT=predis
 
 JWT_SECRET=
 
-DEFAULT_SMS_CLIENT=
+DEFAULT_SMS_CLIENT=tencent
 
 TENCENT_SECRET_ID=
 TENCENT_SECRET_KEY=
-TENCENT_SMS_ENDPOINT=
+TENCENT_SMS_ENDPOINT=sms.tencentcloudapi.com
 TENCENT_SMS_TEMPLATE_ID=
 TENCENT_SMS_SIGN=
 TENCENT_SMS_APP_ID=
